cubicweb (3.26.11-2) UNRELEASED; urgency=medium

  * Remove build dependency on dh-systemd
  * Build python3 basic packages

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Tue, 25 Jun 2019 16:38:09 +0200

cubicweb (3.26.11-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Fri, 07 Jun 2019 14:52:32 +0200

cubicweb (3.26.10-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Thu, 23 May 2019 16:59:45 +0200

cubicweb (3.26.6-1) unstable; urgency=medium

  * New upstream release

 -- Philippe Pepiot <philippe.pepiot@logilab.fr>  Wed, 18 Jul 2018 13:46:36 +0200

cubicweb (3.26.4-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Mon, 18 Jun 2018 08:58:11 +0200

cubicweb (3.26.3-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Mon, 23 Apr 2018 15:18:55 +0200

cubicweb (3.26.2-1) unstable; urgency=medium

  * new upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Thu, 22 Mar 2018 13:52:54 +0100

cubicweb (3.26.1-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Wed, 21 Feb 2018 18:06:54 +0100

cubicweb (3.26.0-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Thu, 01 Feb 2018 09:24:01 +0100

cubicweb (3.25.4-1) unstable; urgency=medium

  * New upstream release.

 -- Denis Laxalde <denis.laxalde@logilab.fr>  Fri, 12 Jan 2018 10:47:38 +0100

cubicweb (3.25.3-1) unstable; urgency=medium

  * New upstream release

 -- Philippe Pepiot <philippe.pepiot@logilab.fr>  Tue, 17 Oct 2017 11:58:05 +0200

cubicweb (3.25.2-1) unstable; urgency=medium

  * New upstream release

 -- Sylvain Thenault <sylvain.thenault@logilab.fr>  Mon, 11 Sep 2017 16:17:49 +0200

cubicweb (3.25.1-1) unstable; urgency=medium

  * New upstream release.
