@@ -2,6 +2,7 @@ cubicweb (3.26.11-2) UNRELEASED; urgency=medium
 
   * Remove build dependency on dh-systemd
   * Build python3 basic packages
+  * Actually install something in cubicweb-ctl binary package
 
  -- Denis Laxalde <denis.laxalde@logilab.fr>  Tue, 25 Jun 2019 16:38:09 +0200
 
